# Fast-Crossbar-Sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_PYTHON.md  build_and_run.sh  build_and_test.sh
examples/basic_inference/: README.md
examples/drift_analysis/: README.md
include/core/: crossbar_simulator.h  nonlinear_crossbar_solver.h  simulation_settings.h
include/crossbar_model/: linear_crossbar_solver.h
include/memristor_model/: FeFET.h  JART_VCM_v1b_var.h  Memristor.h
notebooks/: test.ipynb
python/: README.md  cell_current_analysis.py  setup.py  simple_test.py
src/core/: crossbar_simulator.cpp  nonlinear_crossbar_solver.cpp  xbar_simulator.cpp
src/crossbar_model/: linear_crossbar_solver.cpp
src/memristor_model/: FeFET.cpp  JART_VCM_v1b_var.cpp
src/python/: xbar_wrapper.cpp
tools/: analyze_drift.py  create_input.py
